FIX : must use LinkedHashMap to preserve order (case divisible by 3 and 5)